force-app/main/default/objects/Chat_Error_Event__e/Chat_Error_Event__e.object-meta.xml
<CustomObject>
    <description>Real-time error notifications for monitoring</description>
    <label>Chat Error Event</label>
    <pluralLabel>Chat Error Events</pluralLabel>
</CustomObject>