force-app/main/default/objects/Chat_Error_Event__e/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Which service failed</description>
    <label>Component</label>
    <length>100</length>
    <type>Text</type>
</CustomField>