force-app/main/default/objects/Chat_Error_Event__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>Candidate ID</description>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>