force-app/main/default/objects/Chat_Error_Event__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Brief error description</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>