force-app/main/default/objects/Chat_Error_Event__e/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Category of error</description>
    <label>Error Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>