force-app/main/default/objects/Chat_Error_Event__e/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Related session UUID</description>
    <label>Session ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>