force-app/main/default/objects/Chat_Error_Event__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Info, Warning, Error, Critical</description>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>