force-app/main/default/objects/Chat_Error_Event__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Technical details</description>
    <label>Stack Trace</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>